# evil-numbers-rs

./: .gitmodules  Cargo.toml  Readme.md  build.rs  primesieve-wa.c
.github/workflows/: rust.yml
src/: libpr.rs  main.rs  other.rs
