[package]
name = "evil-numbers"
version = "0.1.0"
authors = ["chamatht <chamatht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
